--- a/Codurance/Codurance/Codurance.csproj
+++ b/Codurance/Codurance/Codurance.csproj
@@ -35,6 +35,9 @@
     <Reference Include="Autofac">
       <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="Humanizer">
+      <HintPath>..\packages\Humanizer.1.37.7\lib\portable-win+net40+sl50+wp8+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Humanizer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,18 +47,82 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\BaseCommandFactory.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Commands\CommandParser.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Commands\FollowCommand.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Commands\FollowCommandFactory.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\ICommandFactory.cs" />
+    <Compile Include="Commands\ICommandParser.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Commands\NullCommand.cs" />
+    <Compile Include="Commands\PostCommand.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Commands\PostCommandFactory.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Commands\ReadCommand.cs" />
+    <Compile Include="Commands\ReadCommandFactory.cs" />
+    <Compile Include="Commands\WallCommand.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Commands\WallCommandFacotry.cs" />
+    <Compile Include="Data\Infrastructure\MockContentContext.cs" />
+    <Compile Include="Data\Infrastructure\Entity.cs" />
+    <Compile Include="Data\Infrastructure\IContentContext.cs" />
+    <Compile Include="Data\Infrastructure\IDbSet.cs" />
+    <Compile Include="Data\Infrastructure\IEntity.cs" />
+    <Compile Include="Data\Infrastructure\MockDbSet.cs" />
     <Compile Include="Data\Model\Message.cs" />
     <Compile Include="Data\Model\Subscription.cs" />
     <Compile Include="Data\Model\User.cs" />
     <Compile Include="Data\Repository\IMessageRepository.cs" />
     <Compile Include="Data\Repository\ISubscriptionRepository.cs" />
     <Compile Include="Data\Repository\IUserRepository.cs" />
-    <Compile Include="Infrastructure\DateTimeHelper.cs" />
+    <Compile Include="Data\Repository\MessageRepository.cs" />
+    <Compile Include="Data\Repository\Repository.cs" />
+    <Compile Include="Data\Repository\SubscriptionRepository.cs" />
+    <Compile Include="Data\Repository\UserRepository.cs" />
+    <Compile Include="Infrastructure\Adatepter\AutoFacContainerFactory.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Infrastructure\Adatepter\AutoFacContiner.cs" />
+    <Compile Include="Infrastructure\AutoFacRegister\BaseRegister.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Infrastructure\Adatepter\IDiContainer.cs" />
+    <Compile Include="Infrastructure\Adatepter\IDiContainerFactory.cs" />
+    <Compile Include="Infrastructure\Adatepter\IDiRegister.cs" />
+    <Compile Include="Infrastructure\AutoFacRegister\CommonRegister.cs" />
+    <Compile Include="Infrastructure\AutoFacRegister\RepositoryRegister.cs" />
+    <Compile Include="Infrastructure\AutoFacRegister\ServiceRegister.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Infrastructure\DateTimeHelper.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Infrastructure\IDateTimeHelper.cs" />
+    <Compile Include="Infrastructure\IPrinterHelper.cs" />
+    <Compile Include="Infrastructure\PrinterHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IMessageService.cs" />
+    <Compile Include="Services\ISubscribeService.cs" />
+    <Compile Include="Services\Shared\IMessagePrinterService.cs" />
+    <Compile Include="Services\Shared\IUserService.cs" />
+    <Compile Include="Services\MessageService.cs" />
+    <Compile Include="Services\Shared\MessagePrinterService.cs" />
+    <Compile Include="Services\SubscribeService.cs" />
+    <Compile Include="Services\Shared\UserService.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
